[FIX] Safari cannot calculate height of the container when an element within has got 'overflow: hidden'. Fixed by using 100% min-height instead of height for one of the flexed items.

--- a/6-components/_components.layout.scss
+++ b/6-components/_components.layout.scss
@@ -8,7 +8,7 @@
 
 // Apps's dynamic container
 .app {
-    height: 100%; // IE11+ height issues fix
+    min-height: 100%; // IE11+ height issues fix; `min-height` instead of `height` to avoid Safari mobile bug where the content gets stuck and cannot be scrolled
     flex: 1 1 auto; // Sticky footer
 }
 
